--- a/page.html
+++ b/page.html
@@ -10,5 +10,24 @@
 	</head>
 	<body onload="onLoad();">
 		<div id="markdownContents"></div>
+		<br />
+		<br />
+		<br />
+		<div id="newsPoster"></div>
+		<style>
+			#markdownContents{
+				display: inline-block; 
+				width:50%; 
+				float:left;
+			}
+			#newsPoster{
+				display: inline-block;
+				width:25%; 
+				float:right;
+				position: relative;
+				right: 30px;
+			}
+		</style>
 	</body>
+	<script type="text/javascript" src="./js/newPages.js" > </script>
 </html>
