--- a/page.html
+++ b/page.html
@@ -9,7 +9,7 @@
 		<title id="title"></title>
 	</head>
 	<body onload="onLoad();">
-		<div id="markdownContents"></div>
+		<div id="markdownContents">加载中......</div>
 		<br />
 		<br />
 		<br />
@@ -19,6 +19,8 @@
 				display: inline-block; 
 				width:50%; 
 				float:left;
+				position: relative;
+				left: 50px;
 			}
 			#newsPoster{
 				display: inline-block;
