--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
                                     <p>欢迎来到我的博客! 在这里你能看到我所原创的物品, 也可以看到我的学习过程, 希望来到我的博客的你, 能够见证我的成长, 见证我的作品的问世. 作为一名新人,
                                         请各位老手多多关照! 也请各位能够积极的在我写的文章下面回复哦! 不用太拘束太客气啦~</p>
+                                    <p><a href="pages.html">博客点这里啦</a></p>
 
 
                                     <figure class="wp-block-image size-large"><img
