--- a/post.html
+++ b/post.html
@@ -43,6 +43,16 @@
     <meta name="msapplication-TileImage"
           content="./imgs/ico/cropped-5b7261fff016f339-270x270.jpg">
     <title id="title">miSkYle's Blog</title>
+    
+    <script id="twentyseventeen-skip-link-focus-fix-js-extra">
+      var twentyseventeenScreenReaderText = {
+          "quote": "<svg class=\"icon icon-quote-right\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-quote-right\" xlink:href=\"#icon-quote-right\"><\/use> <\/svg>",
+          "expand": "\u5c55\u5f00\u5b50\u83dc\u5355",
+          "collapse": "\u6298\u53e0\u5b50\u83dc\u5355",
+          "icon": "<svg class=\"icon icon-angle-down\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-angle-down\" xlink:href=\"#icon-angle-down\"><\/use> <span class=\"svg-fallback icon-angle-down\"><\/span><\/svg>"
+      };
+    </script>
+    <script src="./js/jquery.min.js" id="jquery-js"></script>
 </head>
 
 <body class="post-template-default single single-post postid-69 single-format-standard wp-custom-logo wp-embed-responsive has-header-image has-sidebar colors-dark">
