--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <html lang="zh-CN" prefix="og: http://ogp.me/ns#" class="js svg background-fixed">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+    <meta name="keywords" content="miskyle, 小奕, miskyle的博客, miskyle blog, 笔记" />
+    <meta name="description" content="miSkYle的博客, 包括他的笔记." />
+    <meta name="author" content="miSkYle" />
+    <meta name="copyright" content="2021-2021 miSkYle." />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="http://gmpg.org/xfn/11">
 
