--- a/index.html
+++ b/index.html
@@ -133,10 +133,7 @@
                                     <p>欢迎来到我的博客! 在这里你能看到我所原创的物品, 也可以看到我的学习过程, 希望来到我的博客的你, 能够见证我的成长, 见证我的作品的问世. 作为一名新人,
                                         请各位老手多多关照! 也请各位能够积极的在我写的文章下面回复哦! 不用太拘束太客气啦~</p>
                                     <p><a href="pages.html">博客点这里啦</a></p>
-
-
-                                    <figure class="wp-block-image size-large"><img
-                                            src="./imgs/firstPageEmoji.png" alt=""></figure>
+                                    <span id="busuanzi_container_site_pv">访问量: <span id="busuanzi_value_site_pv"></span>次</span>
                                 </div><!-- .entry-content -->
 
                             </div><!-- .wrap -->
@@ -193,6 +190,7 @@
 <script type="application/javascript">
     MB_onMusicBoxInit();
 </script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
 </body>
 </html>
