--- a/pages.html
+++ b/pages.html
@@ -194,6 +194,7 @@
 <script src="./js/pages/preview-post.js"></script>
 <script src="./js/pages/post-side.js"></script>
 <script type="application/javascript" src = "./js/music/music-box.js"></script>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 <script type="application/javascript">
     MB_onMusicBoxInit();
 </script>
