--- a/pages.html
+++ b/pages.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="keywords" content="miskyle, 小奕, miskyle的博客, miskyle blog, 笔记" />
-    <meta name="description" content="miSkYle的博客, 包括他的笔记." />
+    <meta name="description" content="这个博客里记录着本人在学习过程中遇到的问题以及解决方式, 也记录着一些我在学习编程算法中的过程笔记等等." />
     <meta name="author" content="miSkYle" />
     <meta name="copyright" content="2021-2021 miSkYle." />
     <meta name="viewport" content="width=device-width, initial-scale=1">
