click show detail
1. 对 `code` 标签样式进行微小更改
2. 对 `pre` 标签对应的滚动条外观进行更改
3. 由外置json控制所有html内的菜单.
4. 对音乐盒的播放暂停记忆功能进行完善.
5. 对显示文章格式进行修改, 包括对指定文章url的更改, 并且使得可以自订文章Markdown文件所储存的目录位置.
6. 删除不必要的文件
7. 更名博客页面为笔记页面
8. 移动了原来Markdown所在的位置.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <title>首页 - miSkYle's Blog</title>
     
     <script id="twentyseventeen-skip-link-focus-fix-js-extra">
-      var twentyseventeenScreenReaderText = {
+      let twentyseventeenScreenReaderText = {
           "quote": "<svg class=\"icon icon-quote-right\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-quote-right\" xlink:href=\"#icon-quote-right\"><\/use> <\/svg>",
           "expand": "\u5c55\u5f00\u5b50\u83dc\u5355",
           "collapse": "\u6298\u53e0\u5b50\u83dc\u5355",
@@ -91,14 +91,7 @@
                     </button>
 
                     <div class="menu-%e9%a1%b6%e9%83%a8%e8%8f%9c%e5%8d%95-container">
-                        <ul id="top-menu" class="menu">
-                            <li id="menu-item-21"
-                                class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-21">
-                                <a href="./index.html" aria-current="page">首页</a></li>
-                            <li id="menu-item-23"
-                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-23"><a
-                                    href="./pages.html">博客</a></li>
-                        </ul>
+                        <ul id="top-menu" class="menu"></ul>
                     </div>
                     <a href="#content" class="menu-scroll-down">
                         <svg class="icon icon-arrow-right" aria-hidden="true" role="img">
@@ -177,13 +170,12 @@
         </footer><!-- #colophon -->
     </div><!-- .site-content-contain -->
 </div><!-- #page -->
-<script src="js/comment.js" id="smms-comment-js-js"></script>
+<script src="js/menu/top-menu.js"></script>
 <script src="js/skip-link-focus-fix.js"
         id="twentyseventeen-skip-link-focus-fix-js"></script>
 <script src="js/navigation.js" id="twentyseventeen-navigation-js"></script>
 <script src="js/global.js" id="twentyseventeen-global-js"></script>
 <script src="js/jquery.scrollTo.js" id="jquery-scrollto-js"></script>
-<script src="js/wp-embed.min.js" id="wp-embed-js"></script>
 <script type="application/javascript" src = "./js/music/music-box.js"></script>
 <script type="application/javascript">
     MB_onMusicBoxInit();
