--- a/note-pages.html
+++ b/note-pages.html
@@ -3,7 +3,7 @@
 <html lang="zh-CN" prefix="og: http://ogp.me/ns#" class="js svg background-fixed">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="keywords" content="miskyle, 小奕, miskyle的博客, miskyle blog, 笔记" />
+    <meta name="keywords" content="miskyle, 小奕, miskyle的笔记, miskyle blog, 笔记, 博客" />
     <meta name="description" content="这个博客里记录着本人在学习过程中遇到的问题以及解决方式, 也记录着一些我在学习编程算法中的过程笔记等等." />
     <meta name="author" content="miSkYle" />
     <meta name="copyright" content="2021-2021 miSkYle." />
@@ -15,34 +15,25 @@
     })(document.documentElement);</script>
     <meta name="robots" content="max-image-preview:large">
 
-    <link rel="stylesheet" id="wp-block-library-css" href="./css/style.min.css" media="all">
-    <link rel="stylesheet" id="wp-block-library-theme-css" href="./css/theme.min.css"
+    <link rel="stylesheet" id="wp-block-library-css" href="css/style.min.css" media="all">
+    <link rel="stylesheet" id="wp-block-library-theme-css" href="css/theme.min.css"
           media="all">
-    <link rel="stylesheet" id="twentyseventeen-style-css" href="./css/style.css" media="all">
-    <link rel="stylesheet" id="twentyseventeen-block-style-css" href="./css/blocks.css"
+    <link rel="stylesheet" id="twentyseventeen-style-css" href="css/style.css" media="all">
+    <link rel="stylesheet" id="twentyseventeen-block-style-css" href="css/blocks.css"
           media="all">
-    <link rel="stylesheet" id="twentyseventeen-colors-dark-css" href="./css/colors-dark.css"
+    <link rel="stylesheet" id="twentyseventeen-colors-dark-css" href="css/colors-dark.css"
           media="all">
     <link href="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.6.0/styles/night-owl.min.css" rel="stylesheet">
-    <link rel="icon" href="./imgs/ico/cropped-5b7261fff016f339-32x32.jpg"
+    <link rel="icon" href="imgs/ico/cropped-5b7261fff016f339-32x32.jpg"
           sizes="32x32">
-    <link rel="icon" href="./imgs/ico/cropped-5b7261fff016f339-192x192.jpg"
+    <link rel="icon" href="imgs/ico/cropped-5b7261fff016f339-192x192.jpg"
           sizes="192x192">
     <link rel="apple-touch-icon"
-          href="./imgs/ico/cropped-5b7261fff016f339-180x180.jpg">
+          href="imgs/ico/cropped-5b7261fff016f339-180x180.jpg">
     <meta name="msapplication-TileImage"
           content="./imgs/ico/cropped-5b7261fff016f339-270x270.jpg">
-    <title>博客 - miSkYle's Blog</title>
-    
-    <script id="twentyseventeen-skip-link-focus-fix-js-extra">
-      var twentyseventeenScreenReaderText = {
-          "quote": "<svg class=\"icon icon-quote-right\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-quote-right\" xlink:href=\"#icon-quote-right\"><\/use> <\/svg>",
-          "expand": "\u5c55\u5f00\u5b50\u83dc\u5355",
-          "collapse": "\u6298\u53e0\u5b50\u83dc\u5355",
-          "icon": "<svg class=\"icon icon-angle-down\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-angle-down\" xlink:href=\"#icon-angle-down\"><\/use> <span class=\"svg-fallback icon-angle-down\"><\/span><\/svg>"
-      };
-    </script>
-    <script src="./js/jquery.min.js" id="jquery-js"></script>
+    <title>笔记 - miSkYle's Blog</title>
+    <script src="js/jquery.min.js" id="jquery-js"></script>
 </head>
 
 <body class="blog wp-custom-logo wp-embed-responsive hfeed has-header-image has-sidebar colors-dark">
@@ -55,22 +46,22 @@
 
             <div class="custom-header-media">
                 <div id="wp-custom-header" class="wp-custom-header"><img
-                        src="./imgs/background.png" width="1920" height="1080"
+                        src="imgs/background.png" width="1920" height="1080"
                         alt="miSkYle&#39;s Blog"></div>
             </div>
 
             <div class="site-branding">
                 <div class="wrap">
 
-                    <a href="./index.html" class="custom-logo-link" rel="home"><img width="250"
-                                                                                                   height="250"
-                                                                                                   src="./imgs/ico_normal.jpg"
-                                                                                                   class="custom-logo"
-                                                                                                   alt="miSkYle&#39;s Blog"
-                                                                                                   srcset="./imgs/ico_normal.jpg 250w, ./imgs/ico_150.jpg 150w, ./imgs/ico_100.jpg 100w"
-                                                                                                   sizes="(max-width: 767px) 89vw, (max-width: 1000px) 54vw, (max-width: 1071px) 543px, 580px"></a>
+                    <a href="index.html" class="custom-logo-link" rel="home"><img width="250"
+                                                                                  height="250"
+                                                                                  src="imgs/ico_normal.jpg"
+                                                                                  class="custom-logo"
+                                                                                  alt="miSkYle&#39;s Blog"
+                                                                                  srcset="imgs/ico_normal.jpg 250w, ./imgs/ico_150.jpg 150w, ./imgs/ico_100.jpg 100w"
+                                                                                  sizes="(max-width: 767px) 89vw, (max-width: 1000px) 54vw, (max-width: 1071px) 543px, 580px"></a>
                     <div class="site-branding-text">
-                        <p class="site-title"><a href="./index.html" rel="home">miSkYle's Blog</a></p>
+                        <p class="site-title"><a href="index.html" rel="home">miSkYle's Blog</a></p>
 
                         <p class="site-description">小奕的隐藏小屋</p>
                     </div><!-- .site-branding-text -->
@@ -95,14 +86,7 @@
                     </button>
 
                     <div class="menu-%e9%a1%b6%e9%83%a8%e8%8f%9c%e5%8d%95-container">
-                        <ul id="top-menu" class="menu">
-                            <li id="menu-item-21"
-                                class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-21">
-                                <a href="./index.html">首页</a></li>
-                            <li id="menu-item-23"
-                                class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-11 current_page_item current_page_parent menu-item-23">
-                                <a href="./pages.html" aria-current="page">博客</a></li>
-                        </ul>
+                        <ul id="top-menu" class="menu"></ul>
                     </div>
                 </nav><!-- #site-navigation -->
             </div><!-- .wrap -->
@@ -116,7 +100,7 @@
 
             <div class="wrap">
                 <header class="page-header">
-                    <h1 class="page-title">博客</h1>
+                    <h1 class="page-title">笔记</h1>
                 </header>
 
                 <div id="primary" class="content-area">
@@ -128,11 +112,11 @@
                 <aside id="secondary" class="widget-area" role="complementary" aria-label="博客边栏">
 
                     <section id="recent-posts-4" class="widget widget_recent_entries">
-                        <h2 class="widget-title">近期文章</h2>
+                        <h2 class="widget-title">近期笔记</h2>
                         <div id="postSide"></div>
                     </section>
                     <section id="recent-posts-5" class="widget widget_recent_entries">
-                        <h2 class="widget-title">文章索引 <a onclick="resetList()">重置</a></h2>
+                        <h2 class="widget-title">笔记索引 <a onclick="resetList(1)">重置</a></h2>
                         <div id="postList"></div>
                         <div id="postListGoPage">
                         </div>
@@ -145,8 +129,6 @@
 
         <footer id="colophon" class="site-footer" role="contentinfo">
             <div class="wrap">
-
-
                 <aside class="widget-area" role="complementary" aria-label="页脚">
                     <div class="widget-column footer-widget-1">
                         <section id="custom_html-3" class="widget_text widget widget_custom_html">
@@ -176,34 +158,34 @@
     </div><!-- .site-content-contain -->
 </div><!-- #page -->
 <script id="twentyseventeen-skip-link-focus-fix-js-extra">
-    var twentyseventeenScreenReaderText = {
+    let twentyseventeenScreenReaderText = {
         "quote": "<svg class=\"icon icon-quote-right\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-quote-right\" xlink:href=\"#icon-quote-right\"><\/use> <\/svg>",
         "expand": "\u5c55\u5f00\u5b50\u83dc\u5355",
         "collapse": "\u6298\u53e0\u5b50\u83dc\u5355",
         "icon": "<svg class=\"icon icon-angle-down\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-angle-down\" xlink:href=\"#icon-angle-down\"><\/use> <span class=\"svg-fallback icon-angle-down\"><\/span><\/svg>"
     };
 </script>
-<script src="./js/skip-link-focus-fix.js"
-        id="twentyseventeen-skip-link-focus-fix-js"></script>
-<script src="./js/navigation.js" id="twentyseventeen-navigation-js"></script>
-<script src="./js/global.js" id="twentyseventeen-global-js"></script>
-<script src="./js/jquery.scrollTo.js" id="jquery-scrollto-js"></script>
-<script src="./js/wp-embed.min.js" id="wp-embed-js"></script>
-<script src="./js/marked.min.js"></script>
-<script src="./js/pages/preview-post.js"></script>
-<script src="./js/pages/post-side.js"></script>
-<script type="application/javascript" src = "./js/music/music-box.js"></script>
+<script src="js/menu/top-menu.js"></script>
+<script src="js/skip-link-focus-fix.js" id="twentyseventeen-skip-link-focus-fix-js"></script>
+<script src="js/navigation.js" id="twentyseventeen-navigation-js"></script>
+<script src="js/global.js" id="twentyseventeen-global-js"></script>
+<script src="js/jquery.scrollTo.js" id="jquery-scrollto-js"></script>
+<script src="js/marked.min.js"></script>
+<script src="js/pages/preview-post.js"></script>
+<script src="js/pages/post-side.js"></script>
+<script type="application/javascript" src = "js/music/music-box.js"></script>
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 <script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.6.0/highlight.min.js"></script>
 <script type="application/javascript">
     MB_onMusicBoxInit();
 </script>
 <script>
+    postSizeSetRootPath("./pages/Notes/preview-post.json", "./pages/Notes/post-list.json", "./pages/Notes/jsons/");
+    previewPostSetLoadJsonPath("./pages/Notes/preview-post.json");
     loadNews();
     generatePostSideStart();
-    generatePostListStart();
-    showPostJsonList();
-    hljs.highlightAll();
+    generatePostListStart(1);
+    showPostJsonList(1);
 </script>
 </body>
 </html>
