--- a/post.html
+++ b/post.html
@@ -13,22 +13,7 @@
     <script>(function (html) {
         html.className = html.className.replace(/\bno-js\b/, 'js')
     })(document.documentElement);</script>
-    <script src="./js/wp-emoji-release.min.js"
-            type="text/javascript" defer=""></script>
-    <style>
-        img.wp-smiley,
-        img.emoji {
-            display: inline !important;
-            border: none !important;
-            box-shadow: none !important;
-            height: 1em !important;
-            width: 1em !important;
-            margin: 0 .07em !important;
-            vertical-align: -0.1em !important;
-            background: none !important;
-            padding: 0 !important;
-        }
-    </style>
+
     <link href="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.6.0/styles/night-owl.min.css" rel="stylesheet">
     <link rel="stylesheet" id="wp-block-library-css" href="css/style.min.css" media="all">
     <link rel="stylesheet" id="wp-block-library-theme-css" href="css/theme.min.css" media="all">
@@ -46,15 +31,6 @@
     <meta name="msapplication-TileImage"
           content="./imgs/ico/cropped-5b7261fff016f339-270x270.jpg">
     <title id="title">阅览文章 - miSkYle's Blog</title>
-    
-    <script id="twentyseventeen-skip-link-focus-fix-js-extra">
-      var twentyseventeenScreenReaderText = {
-          "quote": "<svg class=\"icon icon-quote-right\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-quote-right\" xlink:href=\"#icon-quote-right\"><\/use> <\/svg>",
-          "expand": "\u5c55\u5f00\u5b50\u83dc\u5355",
-          "collapse": "\u6298\u53e0\u5b50\u83dc\u5355",
-          "icon": "<svg class=\"icon icon-angle-down\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-angle-down\" xlink:href=\"#icon-angle-down\"><\/use> <span class=\"svg-fallback icon-angle-down\"><\/span><\/svg>"
-      };
-    </script>
     <script src="./js/jquery.min.js" id="jquery-js"></script>
 </head>
 
@@ -108,14 +84,7 @@
                     </button>
 
                     <div class="menu-%e9%a1%b6%e9%83%a8%e8%8f%9c%e5%8d%95-container">
-                        <ul id="top-menu" class="menu">
-                            <li id="menu-item-21"
-                                class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-21">
-                                <a href="./index.html">首页</a></li>
-                            <li id="menu-item-23"
-                                class="menu-item menu-item-type-post_type menu-item-object-page current_page_parent menu-item-23">
-                                <a href="./pages.html">博客</a></li>
-                        </ul>
+                        <ul id="top-menu" class="menu"></ul>
                     </div>
                 </nav><!-- #site-navigation -->
             </div><!-- .wrap -->
@@ -165,7 +134,7 @@
                         <div id="postSide"></div>
                     </section>
                     <section id="recent-posts-5" class="widget widget_recent_entries">
-                        <h2 class="widget-title">文章索引 <a onclick="resetList()">重置</a></h2>
+                        <h2 class="widget-title">文章索引 <a onclick="resetList(1)">重置</a></h2>
                         <div id="postList"></div>
                         <div id="postListGoPage">
 
@@ -210,19 +179,19 @@
 </div><!-- #page -->
 
 <script id="twentyseventeen-skip-link-focus-fix-js-extra">
-    var twentyseventeenScreenReaderText = {
+    let twentyseventeenScreenReaderText = {
         "quote": "<svg class=\"icon icon-quote-right\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-quote-right\" xlink:href=\"#icon-quote-right\"><\/use> <\/svg>",
         "expand": "\u5c55\u5f00\u5b50\u83dc\u5355",
         "collapse": "\u6298\u53e0\u5b50\u83dc\u5355",
         "icon": "<svg class=\"icon icon-angle-down\" aria-hidden=\"true\" role=\"img\"> <use href=\"#icon-angle-down\" xlink:href=\"#icon-angle-down\"><\/use> <span class=\"svg-fallback icon-angle-down\"><\/span><\/svg>"
     };
 </script>
+<script src="js/menu/top-menu.js"></script>
 <script src="./js/skip-link-focus-fix.js"
         id="twentyseventeen-skip-link-focus-fix-js"></script>
 <script src="./js/navigation.js" id="twentyseventeen-navigation-js"></script>
 <script src="./js/global.js" id="twentyseventeen-global-js"></script>
 <script src="./js/jquery.scrollTo.js" id="jquery-scrollto-js"></script>
-<script src="./js/wp-embed.min.js" id="wp-embed-js"></script>
 <script src="./js/marked.min.js"></script>
 <script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.6.0/highlight.min.js"></script>
 <script src="./js/pages/post-side.js"></script>
@@ -233,10 +202,11 @@
     MB_onMusicBoxInit();
 </script>
 <script>
+    postSizeSetRootPath("./pages/Notes/preview-post.json", "./pages/Notes/post-list.json", "./pages/Notes/jsons/");
     generatePostSideStart();
     onPageLoad();
-    generatePostListStart();
-    showPostJsonList();
+    generatePostListStart(getBlogId());
+    showPostJsonList(getBlogId());
 </script>
 </body>
 </html>
