--- a/badapple/badApple.html
+++ b/badapple/badApple.html
@@ -5,6 +5,12 @@
 		<title></title>
 		<script src="./js/jquery-3.6.0.min.js" type="text/javascript" charset="utf-8"></script>
 		<style>
+			
+			@font-face {
+			 font-family: 'fangsong';
+			 src: url('./font/fangsong.ttf') format('truetype');
+			} 
+			
 			#box {
 				height: 445px;
 				width: 640px;
@@ -14,7 +20,7 @@
 			}
 
 			#pic {
-				font-family: 宋体, sans-serif;
+				font-family: fangsong;
 				width: 99%;
 				margin: auto auto;
 			}
