--- a/badapple/badApple.html
+++ b/badapple/badApple.html
@@ -67,7 +67,7 @@
 						MB_updateLyric($("#bgm")[0].currentTime);
 					}
 					loadLyric();
-					$("#info").text("准备完毕!");
+					$("#info").text("初步准备完毕, 等待所有字母进框即代表最终加载完成, 若音画不同步则请按下重置按钮!");
 				}
 			});
 
