--- a/badapple/badApple.html
+++ b/badapple/badApple.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>是BadApple啦 - miSkYle's Blog</title>
 		<script src="./js/jquery-3.6.0.min.js" type="text/javascript" charset="utf-8"></script>
 		<style>
 			
@@ -47,7 +47,7 @@
 				<button onclick="start()">开 始</button>
 				<button onclick="stop()">停 止</button>
 			</p>
-			<audio id="bgm" src="./bgm/BadApple.wav" controls hidden preload></audio>
+			<audio id="bgm" src="./bgm/BadApple.mp3" controls hidden preload></audio>
 		</div>
 		<p id="info" style="width: 650px; height: 20px; margin: auto auto;text-align: center;"></p>
 		<script type="text/javascript">
