--- a/badapple/badApple.html
+++ b/badapple/badApple.html
@@ -5,7 +5,6 @@
 		<title>是BadApple啦 - miSkYle's Blog</title>
 		<script src="./js/jquery-3.6.0.min.js" type="text/javascript" charset="utf-8"></script>
 		<style>
-			
 			@font-face {
 			 font-family: 'fangsong';
 			 src: url('./font/fangsong.ttf') format('truetype');
@@ -25,13 +24,17 @@
 
 			#pic {
 				width: 99%;
-				margin: auto auto;
+				margin: 3px auto;
 			}
 
 			#boxControls {
 				width: 640px;
 				height: 65px;
 				margin: 0px auto 0px;
+			}
+
+			body {
+				background-color: rgba(0, 0, 0, 0.6);
 			}
 		</style>
 	</head>
