--- a/badapple/badApple.html
+++ b/badapple/badApple.html
@@ -57,7 +57,8 @@
 			let index = 0;
 			let badAppleTicks = {};
 			let timer;
-			let rowLyrics = ["29275:流れてく 時の中ででも<br />就算在流逝的时间中", "32473:気だるさが<br />仍能发现", "33673:ほらグルグル廻って<br />你瞧只在原地打转不停", "35873:私から 離れる心も 見えないわ<br />我那已失去的心也看不见", "40873:そう知らない？<br />这样你 明 白 吗？", "43073:自分から 動くこともなく<br />就算自己什么都不做", "46548:時の隙間に 流され続けて<br />时光仍渐渐消逝在缝隙中", "49973:知らないわ 周りのことなく<br />周遭的一切 我一概不知", "53598:私は私 それだけ<br />「我就是我」 仅此而已", "56873:夢見てる？<br />梦中发现了吗？", "58123:何も見てない？<br />什么都没发现？", "59873:語るも無駄な 自分の言葉？<br />发现自己如何诉说那没用的真心话？", "63348:悲しむなんて 疲れるだけよ<br />悲伤只会使自己更累", "66848:何も感じず<br />干脆什么都别多想", "68598:過ごせばいいの<br />如此度日就好", "70348:戸惑う言葉 与えられても<br />就算碎语和闲言", "73823:自分の心 ただ上の空<br />我早已心不在焉", "77348:もし私から 動くのならば<br />若我试着改变这一切的话", "80748:すべて変えるのなら 黒にする<br />这一切都将化为黑暗", "84198:こんな自分に 未来はあるの？<br />这样的我 能有未来吗？", "87800:こんな世界に 私はいるの？<br />这样的世界 能有我吗？", "91123:今切ないの？<br />现在我很难过吗？", "92823:今悲しいの？<br />现在我很悲伤吗？", "94798:自分の事も わからないのまま<br />就连这样的事情 自己都不清楚", "98098:歩むことさえ 疲れるだけよ<br />就算继续走下去 只会感到更累", "101624:人のことなど 知りもしないわ<br />别人的事情 也不愿关心 ", "105075:こんな私も 変われるのなら<br />这样的我 也能改变吗？", "108675:もし変われるのなら<br />如果真的改变的话", "110325:白になる？<br />一切能回归虚无吗？", "126569:流れてく 時の中ででも<br />就算在流逝的时间中", "129850:気だるさがほら<br />仍能发现", "131100:グルグル廻って<br />你瞧  只在原地打转不停", "133450:私から 離れる心も 見えないわそう<br />我那已失去的心也看不见", "138500:知らない？<br />这样你 明 白 吗？", "140350:自分から 動くこともなく<br />就算自己什么都不做", "143775:時の隙間に 流され続けて<br />时光仍渐渐消逝在缝隙中", "147200:知らないわ 周りのことなく<br />周遭的一切 我一概不知", "150725:私は私 それだけ<br />「我就是我」 仅此而已", "154100:夢見てる？<br />在梦中发现了吗？", "155425:何も見てない？<br />什么都没发现？", "157200:語るも無駄な 自分の言葉？<br />发现自己如何诉说那没用的真心话？", "160625:悲しむなんて 疲れるだけよ<br />悲伤只会使自己更累", "164308:何も感じず<br />干脆什么都别多想", "166133:過ごせばいいの<br />如此度日就好", "167733:戸惑う言葉 与えられても<br />就算碎语和闲言", "171183:自分の心 ただ上の空<br />我早已心不在焉", "174658:もし私から 動くのならば<br />若我试着改变这一切的话", "178133:すべて変えるのなら 黒にする<br />这一切就将化为黑暗", "181708:動くのならば<br />想要改变的话", "183608:動くのならば<br />如果改变的话", "185350:すべて壊すわ<br />一切都会破坏", "187100:すべて壊すわ<br />一切都会毁灭", "188800:悲しむならば<br />如果我感到伤心", "190550:悲しむならば<br />如果我感到悲哀", "192300:私の心 白く変われる？<br />我的心是否就能回归虚无呢？", "195750:貴方の事も<br />你的一切", "197475:私のことも<br />我的一切", "199275:すべての事も<br />所有的一切", "200875:まだ知らないの<br />我还完全不清楚", "202800:重い目蓋を 開けたのならば<br />想张开这沉重的眼睛的话", "206275:すべて壊すのなら<br />想毁灭一切的话"];
+			const millsPerTick = 219376.0 / 6570.0;
+			let rowLyrics = ["29275:流れてく 時の中ででも<br />就算在流逝的时间中", "32473:気だるさが<br />仍能发现", "33673:ほらグルグル廻って<br />你瞧只在原地打转不停", "35873:私から 離れる心も 見えないわ<br />我那已失去的心也看不见", "40873:そう知らない？<br />这样你 明 白 吗？", "43073:自分から 動くこともなく<br />就算自己什么都不做", "46548:時の隙間に 流され続けて<br />时光仍渐渐消逝在缝隙中", "49973:知らないわ 周りのことなく<br />周遭的一切 我一概不知", "53598:私は私 それだけ<br />「我就是我」 仅此而已", "56873:夢見てる？<br />梦中发现了吗？", "58123:何も見てない？<br />什么都没发现？", "59873:語るも無駄な 自分の言葉？<br />发现自己如何诉说那没用的真心话？", "63348:悲しむなんて 疲れるだけよ<br />悲伤只会使自己更累", "66848:何も感じず<br />干脆什么都别多想", "68598:過ごせばいいの<br />如此度日就好", "70348:戸惑う言葉 与えられても<br />就算碎语和闲言", "73823:自分の心 ただ上の空<br />我早已心不在焉", "77348:もし私から 動くのならば<br />若我试着改变这一切的话", "80748:すべて変えるのなら 黒にする<br />这一切都将化为黑暗", "84198:こんな自分に 未来はあるの？<br />这样的我 能有未来吗？", "87800:こんな世界に 私はいるの？<br />这样的世界 能有我吗？", "91123:今切ないの？<br />现在我很难过吗？", "92823:今悲しいの？<br />现在我很悲伤吗？", "94798:自分の事も わからないのまま<br />就连这样的事情 自己都不清楚", "98098:歩むことさえ 疲れるだけよ<br />就算继续走下去 只会感到更累", "101624:人のことなど 知りもしないわ<br />别人的事情 也不愿关心 ", "105075:こんな私も 変われるのなら<br />这样的我 也能改变吗？", "108675:もし変われるのなら<br />如果真的改变的话", "110325:白になる？<br />一切能回归虚无吗？", "126569:流れてく 時の中ででも<br />就算在流逝的时间中", "129850:気だるさがほら<br />仍能发现", "131100:グルグル廻って<br />你瞧  只在原地打转不停", "133450:私から 離れる心も 見えないわそう<br />我那已失去的心也看不见", "138500:知らない？<br />这样你 明 白 吗？", "140350:自分から 動くこともなく<br />就算自己什么都不做", "143775:時の隙間に 流され続けて<br />时光仍渐渐消逝在缝隙中", "147200:知らないわ 周りのことなく<br />周遭的一切 我一概不知", "150725:私は私 それだけ<br />「我就是我」 仅此而已", "154100:夢見てる？<br />在梦中发现了吗？", "155425:何も見てない？<br />什么都没发现？", "157200:語るも無駄な 自分の言葉？<br />发现自己如何诉说那没用的真心话？", "160625:悲しむなんて 疲れるだけよ<br />悲伤只会使自己更累", "164308:何も感じず<br />干脆什么都别多想", "166133:過ごせばいいの<br />如此度日就好", "167733:戸惑う言葉 与えられても<br />就算碎语和闲言", "171183:自分の心 ただ上の空<br />我早已心不在焉", "174658:もし私から 動くのならば<br />若我试着改变这一切的话", "178133:すべて変えるのなら 黒にする<br />这一切就将化为黑暗", "181708:動くのならば<br />想要改变的话", "183608:動くのならば<br />如果改变的话", "185350:すべて壊すわ<br />一切都会破坏", "187100:すべて壊すわ<br />一切都会毁灭", "188800:悲しむならば<br />如果我感到伤心", "190550:悲しむならば<br />如果我感到悲哀", "192300:私の心 白く変われる？<br />我的心是否就能回归虚无呢？", "195750:貴方の事も<br />你的一切", "197475:私のことも<br />我的一切", "199275:すべての事も<br />所有的一切", "200875:まだ知らないの<br />我还完全不清楚", "202800:重い目蓋を 開けたのならば<br />想张开这沉重的眼睛的话", "206275:すべて壊すのなら<br />想毁灭一切的话", "208275:黒になれ！<br />就让黑暗吞噬掉这一切！"];
 			let lyrics = {};
 			$.ajax({
 				url: "./badAppleTick.json",
@@ -100,6 +101,7 @@
 					}
 					preTime = temp;
 				}
+				$("#info").html(lyrics[preTime]);
 			}
 
 			function start() {
@@ -107,7 +109,7 @@
 					$("#bgm")[0].currentTime = 0;
 				}
 				$("#bgm")[0].play();
-				timer = setInterval("badAppleTick()", 33.32826);
+				timer = setInterval("badAppleTick()", millsPerTick);
 				$("#info").text("本作品为东方Project同人创作, 字符画引用b站用户丶Nice所制作的字符画.");
 			}
 
