--- a/note-pages.html
+++ b/note-pages.html
@@ -34,6 +34,16 @@
           content="./imgs/ico/cropped-5b7261fff016f339-270x270.jpg">
     <title>笔记 - miSkYle's Blog</title>
     <script src="js/jquery.min.js" id="jquery-js"></script>
+    <script>
+        MathJax = {
+            tex: {inlineMath: [['$', '$'], ['\\(', '\\)']]},
+            skipHtmlTags: [
+                'script', 'noscript', 'style', 'textarea', 'pre',
+                'code', 'annotation', 'annotation-xml'
+            ]
+        };
+    </script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 </head>
 
 <body class="blog wp-custom-logo wp-embed-responsive hfeed has-header-image has-sidebar colors-dark">
