--- a/post.html
+++ b/post.html
@@ -141,6 +141,38 @@
 
                         </article><!-- #post-69 -->
 
+
+                        <nav class="navigation post-navigation" role="navigation" aria-label="文章">
+                            <h2 class="screen-reader-text">文章导航</h2>
+                            <div class="nav-links">
+                                <div class="nav-previous" hidden="hidden">
+                                    <a rel="prev" id="navPrevLink">
+                                        <span class="screen-reader-text">上一篇文章</span>
+                                        <span aria-hidden="true" class="nav-subtitle">上一篇</span>
+                                        <span class="nav-title" id="navPrevTitle">
+                                            <span class="nav-title-icon-wrapper">
+                                                <svg class="icon icon-arrow-left" aria-hidden="true" role="img">
+                                                    <use href="#icon-arrow-left" xlink:href="#icon-arrow-left"></use>
+                                                </svg>
+                                            </span>
+                                        </span>
+                                    </a>
+                                </div>
+                                <div class="nav-next" hidden="hidden">
+                                    <a rel="next" id="navNextLink">
+                                        <span class="screen-reader-text">下一篇文章</span>
+                                        <span aria-hidden="true" class="nav-subtitle">下一篇</span>
+                                        <span class="nav-title" id="navNextTitle">
+                                            <span class="nav-title-icon-wrapper">
+                                                <svg class="icon icon-arrow-right" aria-hidden="true" role="img">
+                                                    <use href="#icon-arrow-right" xlink:href="#icon-arrow-right"></use>
+                                                </svg>
+                                            </span>
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </nav>
                     </main><!-- #main -->
                 </div><!-- #primary -->
 
